--- a/TelecomX.ipynb
+++ b/TelecomX.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVc1dRIPS4e24Vxj4OfR//",
+      "authorship_tag": "ABX9TyNXl0l6/p4jRVkKCU5dCI30",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4005,6 +4005,23 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Introdução\n",
+        "###A intensão deste projeto é extrair, tratar e análisar o banco de dados da empresa TelecomX, afim de avaliar o perfil dos clientes que mais tem sapido da empresa e assim intervir para mantar ele.\n",
+        "## Limpeza e Tratamento de Dados:\n",
+        "###Os dados foram limpos, onde haviar espaços vazios foram preenchidos/excluídos, os alguns dados foram traduzidos e ouve dados que foi mudado o tipo.\n",
+        "##Análise Exploratória de Dados: Verificar os gráficos presente neste notebook\n",
+        "##Conclusões e Insights\n",
+        "###Com base no dados chegamos a conclusões interessantes, como a de mais de 1/4 dos clientes deixaram a empresa, também chegamos a conclusão que aproximadamente 1/7 dos clientes são idosos, porém uma parcela alta deles saiu, pessoas com parceiros tendem a permanecer e as pessoas tendem a sair nos primeiros meses.\n",
+        "##Recomendações:\n",
+        "### É recomendado a criação de planos familiar com duração semestrais ou anuais sendo interessante investir em campanhas de informações ou enventos voltados para a familia e para os idosos."
+      ],
+      "metadata": {
+        "id": "aHRQVSAxyFjX"
+      }
     }
   ]
 }
